Update lists at 20240406-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -163,6 +162,7 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.213.212;
+allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
@@ -604,6 +604,7 @@ allow 192.42.116.22;
 allow 192.42.116.220;
 allow 192.42.116.221;
 allow 192.42.116.23;
+allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
@@ -877,6 +878,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
+allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -985,7 +987,6 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.24.6;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1004,7 +1005,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
@@ -1755,10 +1755,10 @@ allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.6.21.111;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.205.80.179;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1814,6 +1814,7 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
