--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -99,6 +99,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
+allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -129,7 +130,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
