--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -163,6 +162,7 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.213.212;
+set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
@@ -604,6 +604,7 @@ set_real_ip_from 192.42.116.22;
 set_real_ip_from 192.42.116.220;
 set_real_ip_from 192.42.116.221;
 set_real_ip_from 192.42.116.23;
+set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
 set_real_ip_from 192.42.116.27;
@@ -877,6 +878,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5522;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -985,7 +987,6 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
-set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
@@ -1004,7 +1005,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -1755,10 +1755,10 @@ set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
+set_real_ip_from 52.6.21.111;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.205.80.179;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1814,6 +1814,7 @@ set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
+set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
