--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -66,7 +67,6 @@ allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
-allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
@@ -147,6 +147,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -258,7 +259,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -629,7 +629,6 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.181;
-allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
@@ -804,7 +803,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -987,6 +985,8 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1005,6 +1005,8 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
+allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
@@ -1089,7 +1091,6 @@ allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
-allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1361,7 +1362,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1586,7 +1586,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1624,6 +1623,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.195.140.154;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1755,7 +1755,6 @@ allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
-allow 52.6.21.111;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1883,7 +1882,6 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
-allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
