--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -147,7 +147,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -188,7 +187,6 @@ allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -259,6 +257,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -803,6 +802,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1233,7 +1233,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:6bc:499d:b353:1;
+allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2970:1001::4c;
@@ -1362,6 +1362,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1610,6 +1611,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.224.208.215;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1623,7 +1625,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.195.140.154;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1830,9 +1831,9 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
-allow 85.204.116.88;
 allow 85.215.76.62;
 allow 85.93.218.204;
+allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.114.44;
 allow 87.118.116.103;
@@ -1882,6 +1883,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
