--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -25,6 +25,7 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
+deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -356,7 +357,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
-deny 2a02:13f0:8100:6:6bc:499d:b353:1;
+deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:2970:1001::4c;
@@ -485,6 +486,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
