--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -102,7 +102,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
-allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -345,7 +344,6 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
-allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
@@ -358,6 +356,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
+allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2970:1001::4c;
@@ -486,7 +485,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -498,6 +496,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
+allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
