--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -20,7 +19,6 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.171.138;
 set_real_ip_from 104.192.3.74;
-set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -194,7 +192,6 @@ set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
-set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.17.174.198;
 set_real_ip_from 178.175.131.141;
@@ -257,12 +254,12 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -606,7 +603,6 @@ set_real_ip_from 192.42.116.23;
 set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
-set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
@@ -632,12 +628,10 @@ set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
-set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.35.18.105;
-set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -879,7 +873,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -1221,7 +1214,6 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
-set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
@@ -1234,6 +1226,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
+set_real_ip_from 2a02:13f0:8100:6:6bc:499d:b353:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2970:1001::4c;
@@ -1362,7 +1355,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1374,6 +1366,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:3840:8078:23:0:504e:17e2:1337;
+set_real_ip_from 2a0a:3840:8078:23:0:504e:17f1:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1611,7 +1604,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.224.208.215;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1759,6 +1751,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.144.7.253;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1778,6 +1771,7 @@ set_real_ip_from 64.176.66.193;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
+set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
@@ -1801,6 +1795,7 @@ set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.23.226;
+set_real_ip_from 80.78.23.241;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1831,6 +1826,7 @@ set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
+set_real_ip_from 85.204.116.88;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
@@ -1937,5 +1933,6 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
