--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,7 +105,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 114.199.75.111;
 allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -145,13 +144,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 162.247.72.192;
-allow 162.247.72.199;
-allow 162.247.74.200;
-allow 162.247.74.201;
-allow 162.247.74.202;
-allow 162.247.74.204;
-allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.217;
@@ -192,6 +184,7 @@ allow 176.58.89.182;
 allow 178.170.37.11;
 allow 178.17.170.23;
 allow 178.17.171.102;
+allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.17.174.198;
 allow 178.175.131.141;
@@ -475,10 +468,6 @@ allow 185.220.101.96;
 allow 185.220.101.97;
 allow 185.220.101.98;
 allow 185.220.101.99;
-allow 185.220.103.4;
-allow 185.220.103.5;
-allow 185.220.103.6;
-allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.225.69.203;
@@ -542,7 +531,6 @@ allow 188.68.49.235;
 allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
-allow 190.211.254.97;
 allow 191.101.31.10;
 allow 191.96.165.34;
 allow 192.210.255.181;
@@ -603,6 +591,7 @@ allow 192.42.116.23;
 allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
+allow 192.42.116.27;
 allow 192.42.116.28;
 allow 192.46.227.185;
 allow 192.99.168.180;
@@ -628,6 +617,7 @@ allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
+allow 193.239.232.102;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -873,6 +863,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
+allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -946,7 +937,6 @@ allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.248.152;
-allow 23.137.248.69;
 allow 23.137.249.150;
 allow 23.137.249.227;
 allow 23.137.249.8;
@@ -979,7 +969,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -998,13 +987,11 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
-allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1012,7 +999,6 @@ allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
@@ -1214,6 +1200,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
@@ -1617,6 +1604,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.220.11.169;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1625,6 +1613,7 @@ allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
+allow 45.138.16.170;
 allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1727,7 +1716,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1751,7 +1739,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.144.7.253;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
