--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -105,7 +105,6 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
-set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
@@ -145,13 +144,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
-set_real_ip_from 162.247.74.200;
-set_real_ip_from 162.247.74.201;
-set_real_ip_from 162.247.74.202;
-set_real_ip_from 162.247.74.204;
-set_real_ip_from 162.247.74.206;
 set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
 set_real_ip_from 162.247.74.217;
@@ -192,6 +184,7 @@ set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
+set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.17.174.198;
 set_real_ip_from 178.175.131.141;
@@ -475,10 +468,6 @@ set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
 set_real_ip_from 185.220.101.99;
-set_real_ip_from 185.220.103.4;
-set_real_ip_from 185.220.103.5;
-set_real_ip_from 185.220.103.6;
-set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
@@ -542,7 +531,6 @@ set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
-set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.101.31.10;
 set_real_ip_from 191.96.165.34;
 set_real_ip_from 192.210.255.181;
@@ -603,6 +591,7 @@ set_real_ip_from 192.42.116.23;
 set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
+set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
@@ -628,6 +617,7 @@ set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
+set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -873,6 +863,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -946,7 +937,6 @@ set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.152;
-set_real_ip_from 23.137.248.69;
 set_real_ip_from 23.137.249.150;
 set_real_ip_from 23.137.249.227;
 set_real_ip_from 23.137.249.8;
@@ -979,7 +969,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
@@ -998,13 +987,11 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
-set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1012,7 +999,6 @@ set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:6106:2460::;
 set_real_ip_from 2603:3:6107:47a0::;
 set_real_ip_from 2603:3:610a:5050::;
@@ -1214,6 +1200,7 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
+set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
@@ -1617,6 +1604,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.220.11.169;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1625,6 +1613,7 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.170;
 set_real_ip_from 45.138.16.203;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1727,7 +1716,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1751,7 +1739,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.144.7.253;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
