--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -19,6 +20,7 @@ allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
+allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -105,6 +107,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 114.199.75.111;
 allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -531,6 +534,7 @@ allow 188.68.49.235;
 allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
+allow 190.211.254.97;
 allow 191.101.31.10;
 allow 191.96.165.34;
 allow 192.210.255.181;
@@ -613,6 +617,7 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.181;
+allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
@@ -879,7 +884,6 @@ allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
-allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -920,6 +924,7 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
+allow 209.141.62.183;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
@@ -937,6 +942,7 @@ allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.248.152;
+allow 23.137.248.69;
 allow 23.137.249.150;
 allow 23.137.249.227;
 allow 23.137.249.8;
@@ -992,6 +998,7 @@ allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
+allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1567,6 +1574,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1604,7 +1612,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.220.11.169;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1695,7 +1702,6 @@ allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
-allow 51.159.211.57;
 allow 51.195.91.124;
 allow 51.210.138.64;
 allow 51.222.142.67;
@@ -1750,6 +1756,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.80.244.79;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1874,7 +1881,6 @@ allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
-allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.95.231.14;
@@ -1920,6 +1926,5 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
