--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -118,7 +118,6 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
-deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -135,6 +134,7 @@ deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:aabe::1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
+deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -709,6 +709,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
+deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
