--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -117,7 +117,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -484,6 +483,7 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
+set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -719,6 +719,7 @@ set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
+set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
