--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -70,7 +71,6 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.4.76;
-allow 107.189.5.121;
 allow 107.189.5.7;
 allow 107.189.5.80;
 allow 107.189.6.124;
@@ -223,7 +223,6 @@ allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
-allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.174;
 allow 185.100.87.192;
@@ -253,11 +252,13 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
+allow 185.146.232.234;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -291,6 +292,7 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.244;
 allow 185.220.100.245;
 allow 185.220.100.246;
 allow 185.220.100.247;
@@ -763,6 +765,7 @@ allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
+allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -979,6 +982,9 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
+allow 2.58.95.31;
+allow 2.58.95.35;
+allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
@@ -1030,7 +1036,6 @@ allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
-allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 allow 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 allow 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
@@ -1251,6 +1256,7 @@ allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
+allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b136::4;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
@@ -1321,7 +1327,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1351,13 +1356,13 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
-allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1575,7 +1580,6 @@ allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.172.143.84;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1588,6 +1592,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.221.22.51;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1697,7 +1702,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1749,6 +1753,11 @@ allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.221.159.184;
+allow 77.221.159.189;
+allow 77.221.159.192;
+allow 77.221.159.193;
+allow 77.221.159.75;
 allow 77.232.143.248;
 allow 77.48.28.193;
 allow 77.48.28.237;
@@ -1764,7 +1773,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.23.226;
-allow 80.78.23.241;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1789,7 +1797,6 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1824,6 +1831,7 @@ allow 89.236.112.100;
 allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
+allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
