Update lists at 20240408-0300

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -117,6 +117,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -174,6 +175,7 @@ deny 2605:6400:20:482:3920:1829:1839:1293;
 deny 2605:6400:20:be7::1;
 deny 2605:6400:20:ff9::1;
 deny 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
+deny 2605:6400:30:e948:4cee:191b:1e55:25b3;
 deny 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 deny 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 deny 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
@@ -363,7 +365,6 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
-deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -494,6 +495,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:23:0:504e:17e2:1337;
+deny 2a0a:3840:8078:23:0:504e:17f1:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -663,6 +665,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
