--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -28,6 +29,7 @@ allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
+allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.78.162;
@@ -69,6 +71,7 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.4.76;
+allow 107.189.5.121;
 allow 107.189.5.7;
 allow 107.189.5.80;
 allow 107.189.6.124;
@@ -103,6 +106,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -141,7 +145,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -222,6 +225,7 @@ allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
+allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.174;
 allow 185.100.87.192;
@@ -306,7 +310,18 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
+allow 185.220.101.100;
+allow 185.220.101.101;
+allow 185.220.101.102;
+allow 185.220.101.103;
+allow 185.220.101.104;
+allow 185.220.101.105;
+allow 185.220.101.106;
+allow 185.220.101.107;
+allow 185.220.101.108;
+allow 185.220.101.109;
 allow 185.220.101.11;
+allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.129;
@@ -458,6 +473,10 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.96;
+allow 185.220.101.97;
+allow 185.220.101.98;
+allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -523,7 +542,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.11.38;
+allow 189.147.146.221;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -876,6 +895,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1033,6 +1053,7 @@ allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
+allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 allow 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 allow 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
@@ -1223,7 +1244,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1354,6 +1374,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
+allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1523,6 +1544,21 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1577,7 +1613,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.234.150.80;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1625,7 +1660,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.151.122.34;
 allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
@@ -1700,6 +1734,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1734,6 +1769,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.87.246.76;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1771,6 +1807,7 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.23.226;
+allow 80.78.23.241;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1813,7 +1850,6 @@ allow 87.120.254.132;
 allow 88.209.197.8;
 allow 88.80.20.86;
 allow 89.147.108.209;
-allow 89.147.108.56;
 allow 89.147.108.62;
 allow 89.147.108.90;
 allow 89.147.109.226;
