--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -28,6 +29,7 @@ set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
+set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
@@ -69,6 +71,7 @@ set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.4.76;
+set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.5.80;
 set_real_ip_from 107.189.6.124;
@@ -103,6 +106,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -141,7 +145,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -222,6 +225,7 @@ set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
 set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
+set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.192;
@@ -306,7 +310,18 @@ set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
+set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
+set_real_ip_from 185.220.101.102;
+set_real_ip_from 185.220.101.103;
+set_real_ip_from 185.220.101.104;
+set_real_ip_from 185.220.101.105;
+set_real_ip_from 185.220.101.106;
+set_real_ip_from 185.220.101.107;
+set_real_ip_from 185.220.101.108;
+set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
+set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
@@ -458,6 +473,10 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
+set_real_ip_from 185.220.101.96;
+set_real_ip_from 185.220.101.97;
+set_real_ip_from 185.220.101.98;
+set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
@@ -523,7 +542,7 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.11.38;
+set_real_ip_from 189.147.146.221;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -876,6 +895,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -1033,6 +1053,7 @@ set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
+set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
 set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 set_real_ip_from 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
@@ -1223,7 +1244,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c206:2095:2624::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1354,6 +1374,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:3840:8078:23:0:504e:17e2:1337;
+set_real_ip_from 2a0a:3840:8078:23:0:504e:17f1:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1523,6 +1544,21 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -1577,7 +1613,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.234.150.80;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1625,7 +1660,6 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
-set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.151.167.10;
 set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
@@ -1700,6 +1734,7 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1734,6 +1769,7 @@ set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.87.246.76;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1771,6 +1807,7 @@ set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.23.226;
+set_real_ip_from 80.78.23.241;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1813,7 +1850,6 @@ set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.209.197.8;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 89.147.108.209;
-set_real_ip_from 89.147.108.56;
 set_real_ip_from 89.147.108.62;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.109.226;
