--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -64,6 +65,7 @@ allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
+allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
@@ -124,7 +126,6 @@ allow 143.110.156.176;
 allow 143.42.110.237;
 allow 143.42.199.223;
 allow 144.172.118.4;
-allow 144.172.118.55;
 allow 144.172.118.57;
 allow 144.172.73.11;
 allow 144.172.73.6;
@@ -185,6 +186,7 @@ allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -255,7 +257,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -813,6 +814,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -1091,6 +1093,7 @@ allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
+allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1362,7 +1365,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1374,7 +1376,6 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
-allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1613,7 +1614,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.193.211.128;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1759,6 +1759,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.173.100.212;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1786,7 +1787,6 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
-allow 77.220.196.253;
 allow 77.221.159.184;
 allow 77.221.159.189;
 allow 77.221.159.192;
@@ -1807,7 +1807,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.23.226;
-allow 80.78.23.241;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1873,6 +1872,7 @@ allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
