--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -35,6 +35,7 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
+deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -213,6 +214,7 @@ deny 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 deny 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
+deny 2605:6400:30:f6b7::1337;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -483,7 +485,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -495,7 +496,6 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:23:0:504e:17e2:1337;
-deny 2a0a:3840:8078:23:0:504e:17f1:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
