--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -64,6 +65,7 @@ set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
+set_real_ip_from 107.189.31.134;
 set_real_ip_from 107.189.31.225;
 set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
@@ -124,7 +126,6 @@ set_real_ip_from 143.110.156.176;
 set_real_ip_from 143.42.110.237;
 set_real_ip_from 143.42.199.223;
 set_real_ip_from 144.172.118.4;
-set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.57;
 set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
@@ -185,6 +186,7 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -255,7 +257,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -813,6 +814,7 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
+set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -1091,6 +1093,7 @@ set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
+set_real_ip_from 2605:6400:30:f6b7::1337;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1362,7 +1365,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1374,7 +1376,6 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:3840:8078:23:0:504e:17e2:1337;
-set_real_ip_from 2a0a:3840:8078:23:0:504e:17f1:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1613,7 +1614,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.193.211.128;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1759,6 +1759,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.173.100.212;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1786,7 +1787,6 @@ set_real_ip_from 72.167.47.69;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
-set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.159.184;
 set_real_ip_from 77.221.159.189;
 set_real_ip_from 77.221.159.192;
@@ -1807,7 +1807,6 @@ set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.23.226;
-set_real_ip_from 80.78.23.241;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1873,6 +1872,7 @@ set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
+set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
