--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -987,6 +986,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 23.94.36.142;
@@ -1009,6 +1009,7 @@ deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -1710,6 +1711,7 @@ deny 46.38.255.27;
 deny 46.41.150.103;
 deny 47.243.103.140;
 deny 47.243.74.136;
+deny 50.19.142.41;
 deny 50.3.182.133;
 deny 50.3.182.156;
 deny 51.15.249.160;
@@ -1759,7 +1761,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.173.100.212;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1787,6 +1788,7 @@ deny 72.167.47.69;
 deny 74.207.248.172;
 deny 74.82.47.194;
 deny 77.105.146.42;
+deny 77.220.196.253;
 deny 77.221.159.184;
 deny 77.221.159.189;
 deny 77.221.159.192;
