--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -987,6 +986,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
@@ -1009,6 +1009,7 @@ set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0d::f03c:94ff:fe42:512f;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
@@ -1710,6 +1711,7 @@ set_real_ip_from 46.38.255.27;
 set_real_ip_from 46.41.150.103;
 set_real_ip_from 47.243.103.140;
 set_real_ip_from 47.243.74.136;
+set_real_ip_from 50.19.142.41;
 set_real_ip_from 50.3.182.133;
 set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
@@ -1759,7 +1761,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.173.100.212;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1787,6 +1788,7 @@ set_real_ip_from 72.167.47.69;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
+set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.159.184;
 set_real_ip_from 77.221.159.189;
 set_real_ip_from 77.221.159.192;
