Update lists at 20240408-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -191,6 +191,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -256,6 +257,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -1224,6 +1226,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1366,6 +1369,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1615,6 +1619,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.234.142.218;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1669,7 +1674,6 @@ allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
-allow 45.156.26.111;
 allow 45.56.81.190;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1711,7 +1715,6 @@ allow 46.38.255.27;
 allow 46.41.150.103;
 allow 47.243.103.140;
 allow 47.243.74.136;
-allow 50.19.142.41;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1876,12 +1879,7 @@ allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.197.144;
-allow 91.208.75.153;
-allow 91.208.75.156;
 allow 91.208.75.178;
-allow 91.208.75.239;
-allow 91.208.75.3;
-allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
