--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -639,6 +639,7 @@ allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.35.18.105;
+allow 193.35.18.49;
 allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -668,6 +669,7 @@ allow 198.96.155.3;
 allow 198.98.48.192;
 allow 198.98.48.20;
 allow 198.98.48.33;
+allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.53.136;
@@ -930,6 +932,7 @@ allow 209.141.38.110;
 allow 209.141.45.167;
 allow 209.141.46.203;
 allow 209.141.50.178;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1030,6 +1033,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1044,6 +1048,7 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:170c::1;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:37f:9440:9e84:a10c:c36;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1234,7 +1239,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
-allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1372,6 +1376,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
+allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1607,9 +1612,9 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.220.14.137;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1623,6 +1628,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.214.26.48;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1728,6 +1734,7 @@ allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1800,6 +1807,7 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.23.226;
+allow 80.78.23.241;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1814,6 +1822,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1829,7 +1838,6 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
-allow 85.204.116.88;
 allow 85.215.76.62;
 allow 86.104.194.13;
 allow 87.118.110.27;
@@ -1934,6 +1942,5 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
