--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -153,6 +153,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -167,6 +168,7 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:170c::1;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:37f:9440:9e84:a10c:c36;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -356,7 +358,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
-allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -494,6 +495,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
+allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
