Update lists at 20240409-0900

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -143,7 +143,6 @@ allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
@@ -484,6 +483,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -495,7 +495,6 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
-allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
