--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,11 +1,11 @@
 set_real_ip_from 102.130.113.9;
-set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -71,6 +71,7 @@ set_real_ip_from 107.189.31.225;
 set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
+set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.4.76;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.7;
@@ -257,7 +258,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -707,11 +707,13 @@ set_real_ip_from 199.249.230.116;
 set_real_ip_from 199.249.230.117;
 set_real_ip_from 199.249.230.118;
 set_real_ip_from 199.249.230.119;
+set_real_ip_from 199.249.230.120;
 set_real_ip_from 199.249.230.121;
 set_real_ip_from 199.249.230.122;
 set_real_ip_from 199.249.230.123;
 set_real_ip_from 199.249.230.140;
 set_real_ip_from 199.249.230.141;
+set_real_ip_from 199.249.230.142;
 set_real_ip_from 199.249.230.143;
 set_real_ip_from 199.249.230.144;
 set_real_ip_from 199.249.230.145;
@@ -719,6 +721,7 @@ set_real_ip_from 199.249.230.146;
 set_real_ip_from 199.249.230.147;
 set_real_ip_from 199.249.230.148;
 set_real_ip_from 199.249.230.149;
+set_real_ip_from 199.249.230.150;
 set_real_ip_from 199.249.230.151;
 set_real_ip_from 199.249.230.152;
 set_real_ip_from 199.249.230.153;
@@ -758,8 +761,10 @@ set_real_ip_from 199.249.230.186;
 set_real_ip_from 199.249.230.187;
 set_real_ip_from 199.249.230.188;
 set_real_ip_from 199.249.230.189;
+set_real_ip_from 199.249.230.64;
 set_real_ip_from 199.249.230.65;
 set_real_ip_from 199.249.230.66;
+set_real_ip_from 199.249.230.67;
 set_real_ip_from 199.249.230.68;
 set_real_ip_from 199.249.230.69;
 set_real_ip_from 199.249.230.70;
@@ -781,6 +786,7 @@ set_real_ip_from 199.249.230.85;
 set_real_ip_from 199.249.230.86;
 set_real_ip_from 199.249.230.87;
 set_real_ip_from 199.249.230.88;
+set_real_ip_from 199.249.230.89;
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -929,6 +935,7 @@ set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
+set_real_ip_from 205.185.124.193;
 set_real_ip_from 206.237.98.52;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
@@ -1054,6 +1061,7 @@ set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:170c::1;
+set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:37f:9440:9e84:a10c:c36;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1142,11 +1150,13 @@ set_real_ip_from 2620:7:6001::116;
 set_real_ip_from 2620:7:6001::117;
 set_real_ip_from 2620:7:6001::118;
 set_real_ip_from 2620:7:6001::119;
+set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:7:6001::121;
 set_real_ip_from 2620:7:6001::122;
 set_real_ip_from 2620:7:6001::123;
 set_real_ip_from 2620:7:6001::140;
 set_real_ip_from 2620:7:6001::141;
+set_real_ip_from 2620:7:6001::142;
 set_real_ip_from 2620:7:6001::143;
 set_real_ip_from 2620:7:6001::144;
 set_real_ip_from 2620:7:6001::145;
@@ -1154,6 +1164,7 @@ set_real_ip_from 2620:7:6001::146;
 set_real_ip_from 2620:7:6001::147;
 set_real_ip_from 2620:7:6001::148;
 set_real_ip_from 2620:7:6001::149;
+set_real_ip_from 2620:7:6001::150;
 set_real_ip_from 2620:7:6001::151;
 set_real_ip_from 2620:7:6001::152;
 set_real_ip_from 2620:7:6001::153;
@@ -1194,8 +1205,10 @@ set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
 set_real_ip_from 2620:7:6001::189;
 set_real_ip_from 2620:7:6001::e664;
+set_real_ip_from 2620:7:6001::ffff:c759:e640;
 set_real_ip_from 2620:7:6001::ffff:c759:e641;
 set_real_ip_from 2620:7:6001::ffff:c759:e642;
+set_real_ip_from 2620:7:6001::ffff:c759:e643;
 set_real_ip_from 2620:7:6001::ffff:c759:e644;
 set_real_ip_from 2620:7:6001::ffff:c759:e645;
 set_real_ip_from 2620:7:6001::ffff:c759:e646;
@@ -1217,6 +1230,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
 set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
+set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -1371,7 +1385,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1620,6 +1633,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1636,6 +1650,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.206.199.230;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1720,6 +1735,7 @@ set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
+set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.91.124;
 set_real_ip_from 51.210.138.64;
 set_real_ip_from 51.222.142.67;
@@ -1738,9 +1754,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.20.101.237;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1817,6 +1831,7 @@ set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.23.226;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
+set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.182;
