--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -123,7 +123,6 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
-deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
@@ -492,6 +491,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
