Update lists at 20240410-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -118,6 +119,7 @@ allow 135.125.205.25;
 allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
+allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.44.234.69;
@@ -179,6 +181,7 @@ allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.233.16.74;
 allow 172.81.131.139;
+allow 172.81.132.94;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
@@ -196,6 +199,7 @@ allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
+allow 178.17.174.164;
 allow 178.17.174.198;
 allow 178.175.131.141;
 allow 178.175.142.26;
@@ -256,12 +260,12 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1004,6 +1008,7 @@ allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+allow 2402:1f00:8100:400::9;
 allow 2.57.122.179;
 allow 2.57.122.215;
 allow 2.57.122.246;
@@ -1245,6 +1250,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
+allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
@@ -1384,6 +1390,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1633,6 +1640,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.199.173.36;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1818,7 +1826,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.7.204;
+allow 79.102.4.13;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1909,6 +1917,7 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
