--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -123,6 +123,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
@@ -352,6 +353,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
+allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
@@ -491,6 +493,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
