--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -118,6 +119,7 @@ set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
+set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.44.234.69;
@@ -179,6 +181,7 @@ set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.233.16.74;
 set_real_ip_from 172.81.131.139;
+set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
@@ -196,6 +199,7 @@ set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
+set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.17.174.198;
 set_real_ip_from 178.175.131.141;
 set_real_ip_from 178.175.142.26;
@@ -256,12 +260,12 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
+set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1004,6 +1008,7 @@ set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2.57.122.179;
 set_real_ip_from 2.57.122.215;
 set_real_ip_from 2.57.122.246;
@@ -1245,6 +1250,7 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:178::982b;
+set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
@@ -1384,6 +1390,7 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
+set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1633,6 +1640,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.199.173.36;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1818,7 +1826,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.7.204;
+set_real_ip_from 79.102.4.13;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1909,6 +1917,7 @@ set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
+set_real_ip_from 92.249.48.135;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
